WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123511
[Curl][Win] Suggested filename of download is not url decoded.
https://bugs.webkit.org/show_bug.cgi?id=123511
Summary
[Curl][Win] Suggested filename of download is not url decoded.
peavo
Reported
2013-10-30 07:57:43 PDT
When downloading, I often get suggested filenames with % escaped characters in it. The suggested filename needs to be url decoded.
Attachments
Patch
(1.39 KB, patch)
2013-10-30 08:01 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-10-30 08:01:22 PDT
Created
attachment 215502
[details]
Patch
Brent Fulgham
Comment 2
2013-10-30 10:03:08 PDT
Comment on
attachment 215502
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-10-30 10:27:46 PDT
Comment on
attachment 215502
[details]
Patch Clearing flags on attachment: 215502 Committed
r158276
: <
http://trac.webkit.org/changeset/158276
>
WebKit Commit Bot
Comment 4
2013-10-30 10:27:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug