[Curl][Win] Suggested filename of download is not url decoded. https://bugs.webkit.org/show_bug.cgi?id=123511

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-10-30
Reviewed by Brent Fulgham.

* WebDownloadCurl.cpp:
(WebDownload::didReceiveResponse): Url decode suggested filename.

Canonical link: https://commits.webkit.org/141644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158276 268f45cc-cd09-0410-ab3c-d52691b4dbfc