Source/WebKit/win/WebDownloadCurl.cpp
@@ -182,6 +182,7 @@ void WebDownload::didReceiveResponse()
         String suggestedFilename = response.suggestedFilename();
         if (suggestedFilename.isEmpty())
             suggestedFilename = pathGetFileName(response.url().string());
+        suggestedFilename = decodeURLEscapeSequences(suggestedFilename);
         BString suggestedFilenameBSTR(suggestedFilename.characters(), suggestedFilename.length());
         m_delegate->decideDestinationWithSuggestedFilename(this, suggestedFilenameBSTR);
     }
